feat: html custom data
feat: all components

feat: fab

feat: divider

feat: dialog

feat: chip

feat: checkbox

--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
         "path": "./snippets/snippets.code-snippets"
       }
     ],
+    "html": {
+      "customData": ["./html.html-data.json"]
+    },
     "viewsContainers": {
       "activitybar": [
         {
